- Ensure tabs in left menu are always visible

--- a/tethysext/atcore/public/map_view/atcore_map_view.css
+++ b/tethysext/atcore/public/map_view/atcore_map_view.css
@@ -268,3 +268,8 @@
     margin-bottom: 0 !important;
     margin-left: 20px;
 }
+
+.map-tabs .tab-content {
+    max-height: 700px;
+    overflow-y: auto;
+}
